# traerphysics-js

./: .gitignore  LICENSE  README.md  index.html  interaction.js  mesh.html  playground.js  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  style.css  traerphysics.js
backend/: __init__.py  config.py  main.py  pyproject.toml
backend/api/: __init__.py  routes.py  schemas.py  websocket.py
backend/modes/: __init__.py  attraction.py  base.py  cloth.py  mesh3d.py  rope.py  triangle.py
backend/physics/: __init__.py  collisions.py  constraints.py  engine.py  forces.py  integrators.py  particle.py
backend/protocol/: __init__.py  binary.py  messages.py
docs/: index.html
docs/assets/: index-7RHWtKwQ.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: SimulationAPI.ts  constants.ts  controls.ts  main.ts  scene.ts  types.ts
frontend/src/interaction/: DragHandler.ts  MousePicker.ts
frontend/src/network/: ApiClient.ts  WebSocketClient.ts  protocol.ts
frontend/src/physics/: LocalSimulation.ts  ParticleSystem.ts  PhysicsEngine.ts  collisions.ts  constraints.ts  forces.ts  integrators.ts
frontend/src/physics/modes/: attraction.ts  cloth.ts  index.ts  mesh3d.ts  rope.ts  triangle.ts
frontend/src/renderer/: ParticleRenderer.ts  SpringRenderer.ts
frontend/src/ui/: GuiPanel.ts  StatsPanel.ts
