[project]
name = "traerphysics-server"
version = "0.1.0"
description = "TraerPhysics backend - FastAPI + PyTorch physics simulation server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "torch>=2.2",
    "pydantic>=2.5",
]

[project.scripts]
traerphysics = "main:run"
